# robot

components/hardware_driver/boards/esp32s3-devkit-c/: bsp_board.c
examples/en_speech_commands_recognition/: CMakeLists.txt  partitions.csv  server_streaming.py
examples/en_speech_commands_recognition/main/: CMakeLists.txt  display_wrapper.h  main.c
